feat: add supportingFiles, hideLicense option, update spec templates